fix: disable bottom nav on ios due to white space bug

--- a/assets/scss/modules/_config.scss
+++ b/assets/scss/modules/_config.scss
@@ -47,3 +47,10 @@
     @content;
   }
 }
+
+@mixin ios {
+  // See https://stackoverflow.com/a/47818418
+  @supports (-webkit-touch-callout: none) {
+    @content;
+  }
+}
